--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -1,9 +1,9 @@
 <ion-navbar *navbar>
-  <ion-title>Tab 1</ion-title>
+  <ion-title>Listen</ion-title>
 </ion-navbar>
 
 <ion-content padding class="page1">
-  <h2>Welcome to Ionic!</h2>
+  <h2>Welcome to Ionic! Woooo</h2>
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
