--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -1,15 +1,17 @@
 <ion-navbar *navbar>
-  <ion-title>Listen</ion-title>
+  <ion-title>Listen to Peterborough</ion-title>
 </ion-navbar>
 
 <ion-content padding class="page1">
-  <h2>Welcome to Ionic! Woooo</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>www/app/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+	<audio controls id="rfp-hidden-player">
+	  <source src="http://trentradio.ca:8800/rfp" type="audio/mp3">
+	Your browser does not support the audio element.
+	</audio>
+	<button full id="playbutton" (click)="playerclick()">
+		<ion-icon class="rfp-playbutton" name="play"></ion-icon>
+		Click to stream
+	</button>
+
+	
 </ion-content>
