--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -3,15 +3,24 @@
 </ion-navbar>
 
 <ion-content padding class="page1">
+<p>Welcome to the Radio Free Peterborough App.  This page plays the main (randomized) stream for your enjoyment</p>
 
+	<div id="player-holder">
 	<audio controls id="rfp-hidden-player">
 	  <source src="http://trentradio.ca:8800/rfp" type="audio/mp3">
 	Your browser does not support the audio element.
 	</audio>
-	<button full id="playbutton" (click)="playerclick()">
-		<ion-icon class="rfp-playbutton" name="play"></ion-icon>
-		Click to stream
+	</div>
+	<button class="button button-full button-light" id="playbutton" (click)="playerclick()">
+			<img src="play.png" width="150px;" height="150px;">
 	</button>
+	
+	<div id="metadata-wrapper">
+	<div id="track">Click play to start stream</div>
+	<div id="artist"></div>
+	</div>
+	
+<p>Radio Free Peterborough is here to serve you.  <a href="mailto:steve@radiofreepeterborough.ca?subject=Radio Free Peterborough Feedback">Please contact us</a> if you have any questions or comments.
 
 	
 </ion-content>
