added recording lookup scaffolding

--- a/Radio Free Peterborough/app/pages/page2/artistModal.html
+++ b/Radio Free Peterborough/app/pages/page2/artistModal.html
@@ -5,7 +5,7 @@
   </ion-title>
 </ion-navbar>
 <ion-content>
-<div id="biography" ng-bind-html="bio">{{bio}}</div>
+<div id="biography" [innerHTML]="bio">...</div>
 <div id="stream-all-btn"></div>
 <div id="recordings">
 	
