fleshing out recording modal

--- a/Radio Free Peterborough/app/pages/page2/artistModal.html
+++ b/Radio Free Peterborough/app/pages/page2/artistModal.html
@@ -4,7 +4,7 @@
    {{name}} nid: {{nid}}
   </ion-title>
 </ion-navbar>
-<ion-content>
+<ion-content padding class="artist-modal">
 <div id="biography" [innerHTML]="bio">...</div>
 <div id="stream-all-btn"></div>
 <div id="recordings">
