--- a/Radio Free Peterborough/app/pages/page2/artistModal.html
+++ b/Radio Free Peterborough/app/pages/page2/artistModal.html
@@ -1,21 +1,16 @@
-
 <ion-navbar *navbar>
   <ion-title>
-   {{name}} nid: {{nid}}
+   {{name}}
   </ion-title>
 </ion-navbar>
 <ion-content padding class="artist-modal">
-<div id="biography" [innerHTML]="bio">...</div>
-<div id="stream-all-btn"></div>
-<div id="recordings">
-	
-	<ion-list>
-	  <ion-item *ngFor="#recording of recordings" (click)="onRecordingClick($event)">
-	    {{ recording }} 
-	  </ion-item>
-	</ion-list>
-
-	
-</div>
-
+	<div id="biography" [innerHTML]="bio">...</div>
+	<div id="stream-all-btn"></div>
+	<div id="recordings">
+		<ion-list>
+		  <ion-item *ngFor="#recording of recordings" (click)="onRecordingClick($event)">
+		    {{ recording }} 
+		  </ion-item>
+		</ion-list>
+	</div>
 </ion-content>
