next prev buttons now working

--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -15,20 +15,24 @@
 			<img src="play.png" width="70px;" height="70px;">
 	</button>
 	
-	TODO
-	<ul>
-		<li>code in support for next / prev buttons</li>
-		<li>code in recording details to pull tracks in order by track number</li>
-		<li>code in support for storing artist list locally </li>
-	
-	</ul>
-	
+
 	<div id="metadata-wrapper">
 	<div id="track">Click play to start stream</div>
 	<div id="artist"></div>
 	</div>
 	
+	TODO
+	<ul>
+		<li>code in support for next / prev buttons</li>
+		<li>code in recording details to pull tracks in order by track number</li>
+		<li>code in support for storing artist list locally </li>
+		<li>When we load an album, reset the playing status and play button image not just stopping the audio</li>
+	
+	</ul>
+	
+	
 <p>Radio Free Peterborough is here to serve you.  <a href="mailto:steve@radiofreepeterborough.ca?subject=Radio Free Peterborough Feedback">Please contact us</a> if you have any questions or comments.
+	
 
 	
 </ion-content>
