auto-play next track now working

--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -23,11 +23,8 @@
 	
 	TODO
 	<ul>
-		<li>code in support for next / prev buttons</li>
-		<li>code in recording details to pull tracks in order by track number</li>
 		<li>code in support for storing artist list locally </li>
-		<li>When we load an album, reset the playing status and play button image not just stopping the audio</li>
-	
+		<li>when we start to play a track, hilight the track in the list...</li>
 	</ul>
 	
 	
