--- a/Radio Free Peterborough/app/pages/page2/page2.html
+++ b/Radio Free Peterborough/app/pages/page2/page2.html
@@ -1,12 +1,14 @@
 <ion-navbar *navbar>
   <ion-title>
-   Peterborough Artists
+   Artists
   </ion-title>
+
 </ion-navbar>
+<ion-searchbar [(ngModel)]="searchQuery" 
+(input)="getItems($event)"  
+(cancel)="onSearchCancel($event)"></ion-searchbar>
 <ion-content class="page2">
-	<ion-searchbar [(ngModel)]="searchQuery" 
-	(input)="getItems($event)"  
-	(cancel)="onSearchCancel($event)"></ion-searchbar>
+
 	<ion-list>
 	  <ion-item *ngFor="#item of items" (click)="onArtistClick($event)">
 	    {{ item }} 
