add stats and about tabs

--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -23,8 +23,10 @@
 	
 	TODO
 	<ul>
-		<li>code in support for storing artist list locally </li>
-		<li>when we start to play a track, hilight the track in the list...</li>
+		<li>todo - style bio</li>
+		<li>add a stats page</li>
+		<li>populate and style about us page</li>
+		<li>when updating current song on recording page, also update the now playing info on page1</li>	
 	</ul>
 	
 	
