--- a/Radio Free Peterborough/app/pages/page4/page4.html
+++ b/Radio Free Peterborough/app/pages/page4/page4.html
@@ -1,10 +1,12 @@
 
 <ion-navbar *navbar>
   <ion-title>
-    Tab 4
+   About RFP
   </ion-title>
 </ion-navbar>
 
 <ion-content class="page4">
+About Radio Free Peterborough:
+
 
 </ion-content>
