--- a/Radio Free Peterborough/app/pages/tabs/tabs.html
+++ b/Radio Free Peterborough/app/pages/tabs/tabs.html
@@ -1,9 +1,10 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Listen" tabIcon="musical-notes"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Stream" tabIcon="headset"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Artists" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Tracks" tabIcon="map"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="RFP Stats" tabIcon="analytics"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="About" tabIcon="help"></ion-tab>
 <!--
-  <ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+ 
   <ion-tab [root]="tab5Root" tabTitle="Contact Us" tabIcon="information-circle"></ion-tab>
 -->
 
