--- a/Radio Free Peterborough/app/pages/page2/artistModal.html
+++ b/Radio Free Peterborough/app/pages/page2/artistModal.html
@@ -1,16 +1,24 @@
 <ion-navbar *navbar>
-  <ion-title>
-   {{name}}
-  </ion-title>
+  <ion-title>{{name}}</ion-title>
+
+<!-- <img src="{{album_art[i]}}" class="album-art-thumbnail" (click)="onRecordingClick($event)" /> {{ recording }} <br/><div class="year-of-release">{{years_of_release[i]}}</div> -->
+	
 </ion-navbar>
 <ion-content padding class="artist-modal">
-	<div id="biography" [innerHTML]="bio">...</div>
-	<div id="stream-all-btn"></div>
+	<div class="bar bar-subheader">
+	  <h2 class="title">Recordings for {{name}}</h2>
+	</div>
 	<div id="recordings">
+		
 		<ion-list>
-		  <ion-item *ngFor="#recording of recordings" (click)="onRecordingClick($event)">
-		    {{ recording }} 
+		  <ion-item *ngFor="#recording of recordings; #i = index"  (click)="onRecordingClick($event)" >
+		   <ion-thumbnail item-left>
+			<img src="{{album_art[i]}}" class="album-art-thumbnail"  />
+			</ion-thumbnail> {{recording}}
+				<br/><div class="year-of-release">{{years_of_release[i]}}</div>
+			
 		  </ion-item>
 		</ion-list>
 	</div>
+	<div id="biography" [innerHTML]="bio">...</div>
 </ion-content>
