--- a/Radio Free Peterborough/app/pages/page3/page3.html
+++ b/Radio Free Peterborough/app/pages/page3/page3.html
@@ -1,10 +1,10 @@
 
 <ion-navbar *navbar>
   <ion-title>
-    Tab 3
+   RFP Stats
   </ion-title>
 </ion-navbar>
-
 <ion-content class="page3">
+Statistics, facts and figures about the Radio Free Peterborough Project
 
 </ion-content>
