add stats and about tabs

--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -23,10 +23,12 @@
 	
 	TODO
 	<ul>
+		<li>todo - add year of release to recording modal</li>
 		<li>todo - style bio</li>
 		<li>add a stats page</li>
 		<li>populate and style about us page</li>
-		<li>when updating current song on recording page, also update the now playing info on page1</li>	
+		<li>style the now-playing class on recording modal</li>
+	
 	</ul>
 	
 	
