--- a/Radio Free Peterborough/app/pages/page2/page2.html
+++ b/Radio Free Peterborough/app/pages/page2/page2.html
@@ -19,7 +19,7 @@
 <ion-content class="page2">
 
 	<ion-list>
-	  <ion-item *ngFor="#item of items" (click)="onArtistClick($event)">
+	  <ion-item *ngFor="#item of items" (click)="onArtistClick($event)" class="artist">
 	    {{ item }} 
 	  </ion-item>
 	</ion-list>
