--- a/Radio Free Peterborough/app/pages/page3/page3.html
+++ b/Radio Free Peterborough/app/pages/page3/page3.html
@@ -7,4 +7,7 @@
 <ion-content class="page3">
 Statistics, facts and figures about the Radio Free Peterborough Project
 
+<br>
+Pull them from http://radiofreepeterborough.ca/ionic_stats.php
+
 </ion-content>
