css for now playing track and player buttons all set up

--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -17,17 +17,19 @@
 	
 
 	<div id="metadata-wrapper">
-	<div id="track">Click play to start stream</div>
+	<div id="track">Click play to start randomized stream</div>
 	<div id="artist"></div>
 	</div>
 	
 	TODO
 	<ul>
-		<li>todo - add year of release to recording modal</li>
+		<li>todo - add a mailto link for suggest a correction / addition</li>
+		<li>todo  style the stats page</li>
+		<li>todo - reload artist cache every 25 loads</li>
 		<li>todo - style bio</li>
 		<li>add a stats page</li>
 		<li>populate and style about us page</li>
-		<li>style the now-playing class on recording modal</li>
+		
 	
 	</ul>
 	
