--- a/Radio Free Peterborough/app/pages/page3/page3.html
+++ b/Radio Free Peterborough/app/pages/page3/page3.html
@@ -5,9 +5,19 @@
   </ion-title>
 </ion-navbar>
 <ion-content class="page3">
+
+<ion-card>
+
+<ion-card-header>
 Statistics, facts and figures about the Radio Free Peterborough Project
-
-<br>
-Pull them from http://radiofreepeterborough.ca/ionic_stats.php
-
+</ion-card-header>
+<ion-card-content>
+<ul>
+<li>Artists: {{artists}}</li>
+<li>Recordings: {{recordings}}</li>
+<li>Tracks: {{tracks}}</li>
+<li>FM Broadcast Hours: {{hours}}</li>
+</ul>
+</ion-card-content>
+</ion-card>
 </ion-content>
