css for now playing track and player buttons all set up

--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -23,7 +23,7 @@
 	
 	TODO
 	<ul>
-		<li>todo - add a mailto link for suggest a correction / addition</li>
+		<li>Add a logging -> stats gathering DB for all ionic_* scripts on RFP</li>
 		<li>todo  style the stats page</li>
 		<li>todo - reload artist cache every 25 loads</li>
 		<li>todo - style bio</li>
