--- a/Radio Free Peterborough/app/pages/page2/artistModal.html
+++ b/Radio Free Peterborough/app/pages/page2/artistModal.html
@@ -22,4 +22,8 @@
 		</ion-list>
 	</div>
 	<div id="biography" [innerHTML]="bio">...</div>
+
+
+	  See anything missing or incorrect about this artist? <a href="mailto:steve@radiofreepeterborough.ca?subject=Correction or addition for artist {{name}}">Please let us know so we can fix it!</a>
+
 </ion-content>
