--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -23,8 +23,8 @@
 	
 	TODO
 	<ul>
+		<li>Fix the track listings for "various" recordings - like JP Hovercraft - Eldorado - add a 'Group by' clause to the server-side script</li>
 		<li>Add a logging -> stats gathering DB for all ionic_* scripts on RFP</li>
-		<li>todo  style the stats page</li>
 		<li>todo - reload artist cache every 25 loads</li>
 		<li>todo - style bio</li>
 		<li>add a stats page</li>
