--- a/Radio Free Peterborough/app/pages/page3/page3.html
+++ b/Radio Free Peterborough/app/pages/page3/page3.html
@@ -9,7 +9,7 @@
 <ion-card class="about">
 
 <ion-card-header>
-<h1>About the Radio Free Peterborough Project</h1>
+<h2>About the Radio <br/>Free Peterborough Project</h2>
 </ion-card-header>
 <ion-card-content>
 <p>
