android build working properly now

--- a/Radio Free Peterborough/app/pages/page1/page1.html
+++ b/Radio Free Peterborough/app/pages/page1/page1.html
@@ -17,16 +17,14 @@
 	<div id="track">Click play to start randomized stream</div>
 	<div id="artist"></div>
 	</div>
+
+<ion-card class="rfp-contact-us">
+
 	
-	TODO
-	<ul>
-		<li>Fix the artist load / display for sheesham lotus and son (parsing is weird on '&' )</li>
-		<li>todo - style bio</li>	
-	</ul>
-	
-	
-<p>Radio Free Peterborough is here to serve you.  
+<p>Radio Free Peterborough is here to serve you.</p>
+<p>  
 	<a href="mailto:steve@radiofreepeterborough.ca?subject=Radio Free Peterborough Feedback">Please contact us</a>
 	if you have any questions or comments.</p>
-		
+	
+</ion-card>
 </ion-content>
