--- a/Radio Free Peterborough/app/pages/page2/artistModal.html
+++ b/Radio Free Peterborough/app/pages/page2/artistModal.html
@@ -11,14 +11,14 @@
 	<div id="recordings">
 		
 		<ion-list>
-		  <ion-item *ngFor="#recording of recordings; #i = index"  (click)="onRecordingClick($event)" class="recording" >
-		   <ion-thumbnail item-left>
+		  <button ion-item *ngFor="#recording of recordings; #i = index"  (click)="onRecordingClick($event)" class="recording" >
+		   <ion-thumbnail item-left >
 			<img src="{{album_art[i]}}" class="album-art-thumbnail"  />
 			<br/><div class="year-of-release">{{years_of_release[i]}}</div>
 			</ion-thumbnail> {{recording}}
 				
 			
-		  </ion-item>
+		  </button >
 		</ion-list>
 	</div>
 	<div id="biography" [innerHTML]="bio">...</div>
